service.yaml
apiVersion: v1
kind: Service
metadata:
  name: libreddit
  labels:
    app: libreddit
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: libreddit
