ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: libreddit
  labels:
    app: libreddit
spec:
  tls:
  - hosts:
      - reddit.beanteam.org
    secretName: beanteam-tls
  rules:
  - host: reddit.beanteam.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: libreddit
            port:
              number: 80
